# better-diff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-08-better-diff-design.md  2026-03-08-better-diff-implementation.md
src/: app.rs  config.rs  lib.rs  main.rs  syntax.rs  theme.rs  watcher.rs  worktree.rs
src/diff/: folding.rs  git2_provider.rs  mod.rs  model.rs  moves.rs  patch_parser.rs  provider.rs  tokens.rs
src/ui/: animation.rs  minimap.rs  mod.rs  split_pane.rs
tests/: integration.rs
