[package]
name = "better-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
git2 = "0.20"
similar = { version = "2", features = ["inline"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-zig = "1"
notify = "8"
notify-debouncer-mini = "0.6"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
